// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionETA should render correctly for 1 block ETA 1`] = `
<PeachText>
  in 1 block
</PeachText>
`;

exports[`TransactionETA should render correctly for more than 1 block ETA 1`] = `
<PeachText>
  in 1008 blocks
</PeachText>
`;
